--- a/html/rea-rallye.html
+++ b/html/rea-rallye.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>Rallye CMS H.Barbuse 2011</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/styleresponsive.css">
   <link rel="stylesheet" href="css/stylenav.css">
